# ColorCorrectionPackage

./: README.md  pyproject.toml  quick_run.py  requirements.txt  setup.py
.github/workflows/: python-publish.yml
ColorCorrectionPipeline/: __init__.py  core.py
ColorCorrectionPipeline/FFC/: FF_correction.py
src/: __init__.py  quick_run.py
