[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ColorCorrectionPipeline"
version = "1.01.2"
description = "A Stepwise color‐correction pipeline with flat‐field, gamma, white‐balance, and color‐correction stages."
readme = "README.md"
license = { text = "LICENSE" }
authors = [
  { name = "Collins Wakholi", email = "wcoln@yahoo.com" },
  { name = "Devin A. Rippner", email = "devinrippner@gmail.com" },
]
keywords = ["color", "image-processing", "flat-field", "gamma-correction", "white-balance", "color-correction"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "colour-science",
    "color-checker-detection",
    "opencv-python",
    "scikit-learn",
    "scipy",
    "numpy",
    "torch",
    "ultralytics",
    "scikit-image",
    "plotly",
    "matplotlib",
    "pandas",
    "difflib", # difflib is a built-in module, usually not needed here unless there's a package named 'difflib'
    "glob2",   # If you meant the PyPI package glob2, otherwise the built-in 'glob' is not a dependency
    "statsmodels",
    "seaborn",
]

[project.urls]
Homepage = "https://github.com/collinswakholi/ColorCorrectionPackage"
"Bug Tracker" = "https://github.com/collinswakholi/ColorCorrectionPackage/issues"
